[package]
name = "dyn-any"
version = "0.2.0"
edition = "2021"
authors = ["Dennis Kobert <dennis@kobert.dev>"]


description = "An Any trait that works for arbitrary lifetimes"
documentation = "https://docs.rs/dyn-any"
repository = "https://github.com/TrueDoctor/dyn-any"
readme = "README.md"
license = "MIT"

[dependencies]
dyn-any-derive = { path = "derive", version = "0.2.0", optional = true }

[features]
derive = ["dyn-any-derive"]

[package.metadata.docs.rs]
all-features = true
